CHANGES.txt - 06/29/2000
------------------------

CHANGES IN HTMLDOC v1.8.9

    NEW FEATURES

    CHANGES

    BUG FIXES

	- Didn't allow &#nnn; character escapes inside
	  preformatted text.


CHANGES IN HTMLDOC v1.8.8

    NEW FEATURES

	- Added support for PDF security/encryption!
	- Now support TABLE height attribute.
	- Now generate an error message if no pages are
	  generated (with a suggestion to use the webpage
	  option.)
	- New "paths" option to specify additional directories
	  to search for files.  This is useful when the source
	  files use absolute server paths.

    CHANGES

	- Added missing casts in htmllib.cxx that were causing a
	  compile warning with some compilers.
	- No longer draw borders around empty cells in tables..
	- Now disable the TOC tab when using webpage mode.
	- Now scale title image to 100% in HTML output.
	- Now handle comments with missing whitespace after the
	  "<!--".

    BUG FIXES

	- Nested tables didn't take into account the table
	  border width, spacing, or padding values.
	- HTMLDOC crashed under Solaris when reading HTML files
	  from the standard input.
	- <ELEM>text</ELEM> <MELE>text</MELE> was rendered
	  without an intervening space.


CHANGES IN HTMLDOC v1.8.7

    NEW FEATURES

	- The configure script now uses the local PNG, ZLIB,
	  and/or JPEG libraries when they are new enough.
	- The configure script now uses the -fno-rtti,
	  -fno-exceptions, and -fpermissive options as needed
	  with GCC (smaller, faster executables, works around X
	  header bugs in Solaris.)
	- Added a --toctitle option to set the table-of-contents
	  title from the command-line (was only available in the
	  GUI in previous releases...)
	- New "<!-- NEED amount -->" comment to force a page
	  feed if there is not sufficient room on the page for
	  the following text.
	- Page comments are now supported in tables.
	- Table rows are now allocated dynamically, MAX_ROWS at
	  a time.

    CHANGES
